# nngraphons

./: .gitignore  README.md  graphon_gradient_learning.py  pyproject.toml  synthetic_graphs.py
experiment_notebooks/: base_learning_algorithm.ipynb  package_usage.ipynb
nngraphons/: __init__.py  graphon_gradient_learning.py
nngraphons/architectures/: __init__.py  mlp.py  rbf.py  skipcon_mlp.py
nngraphons/data_loading/: __init__.py  synthetic_graphs.py
nngraphons/data_manipulation/: graphon_sampling.py  networkx_conversion.py  small_graphs.py  synthetic_graphons.py
nngraphons/learning/: __init__.py  edge_sampler.py  gradient_learning.py  helper_algorithms.py  homomorphism_densities.py  homomorphism_density.py  loss_functions.py
nngraphons/visualization/: __init__.py  graphon_visualization.py
