[tool.poetry]
name = "nngraphons"
version = "0.1.0"
description = ""
authors = ["Huy Hoang Vu <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
torch = "^1.4"
scipy = "*"
matplotlib = "*"
pandas = "*"
networkx = "*"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
